Update email in index.html

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                       Moratuwa</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>School:</strong> <span>Central College
                       Kuliyapitiya</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>shanukamaleesh@gmail.com</span>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>maleeshshanuka@gmail.com</span>
                   </li>
 
                 </ul>
@@ -282,7 +282,7 @@
               <ul>
                 <li>Kobeigane, Kurunegala, Colombo</li>
 
-                <li>shanukamaleesh@gmail.com</li>
+                <li>maleeshshanuka@gmail.com</li>
               </ul>
             </div>
 
@@ -625,7 +625,7 @@
                   <div class="email">
                     <i class="bi bi-envelope"></i>
                     <h4>Email:</h4>
-                    <p><a href="mailto:shanukamaleesh@gmail.com">shanukamaleesh@gmail.com</a></p>
+                    <p><a href="mailto:maleeshshanuka@gmail.com">maleeshshanuka@gmail.com</a></p>
                   </div>
                 </div>
 
